<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#56C7F2"
    android:padding="20dp"
    tools:context=".MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:text="@string/main_menu"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/weatherAndAirportButton"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/armata"
        android:paddingTop="60dp"
        android:text="@string/wx_and_airport"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/weatherAndAirportButton"
        app:layout_constraintEnd_toEndOf="@+id/weatherAndAirportButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/weatherAndAirportButton"
        app:layout_constraintTop_toTopOf="@+id/weatherAndAirportButton"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/metaricon"
        android:contentDescription="@string/metaricon"/>

    <Button
        android:id="@+id/windCalculatorButton"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/armata"
        android:paddingTop="50dp"
        android:text="@string/wind_calculator"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/windCalculatorButton"
        app:layout_constraintEnd_toEndOf="@+id/windCalculatorButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/windCalculatorButton"
        app:layout_constraintTop_toTopOf="@+id/windCalculatorButton"
        app:layout_constraintVertical_bias="0.186"
        app:srcCompat="@drawable/windicon"
        android:contentDescription="@string/windicon"/>

    <Button
        android:id="@+id/flightTimeAndFuelButton"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/armata"
        android:paddingTop="60dp"
        android:text="@string/flight_time_and_fuel"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:elevation="5dp"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintBottom_toBottomOf="@+id/flightTimeAndFuelButton"
        app:layout_constraintEnd_toEndOf="@+id/flightTimeAndFuelButton"
        app:layout_constraintStart_toStartOf="@+id/flightTimeAndFuelButton"
        app:layout_constraintTop_toTopOf="@+id/flightTimeAndFuelButton"
        app:srcCompat="@drawable/fuelicon"
        android:contentDescription="@string/fuelicon"/>

    <Button
        android:id="@+id/descentCalculatorButton"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/armata"
        android:paddingTop="50dp"
        android:text="@string/descent_calculator"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/descentCalculatorButton"
        app:layout_constraintEnd_toEndOf="@+id/descentCalculatorButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/descentCalculatorButton"
        app:layout_constraintTop_toTopOf="@+id/descentCalculatorButton"
        app:layout_constraintVertical_bias="0.186"
        app:srcCompat="@drawable/landingicon"
        android:contentDescription="@string/landingicon"/>

    <Button
        android:id="@+id/specialOpsButton"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/armata"
        android:paddingTop="60dp"
        android:text="@string/special_ops"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/specialOpsButton"
        app:layout_constraintEnd_toEndOf="@+id/specialOpsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/specialOpsButton"
        app:layout_constraintTop_toTopOf="@+id/specialOpsButton"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/clipboardicon"
        android:contentDescription="@string/clipboardicon" />

    <Button
        android:id="@+id/phoneticAlphabetButton"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/armata"
        android:paddingTop="60dp"
        android:text="@string/phonetic_alphabet"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/phoneticAlphabetButton"
        app:layout_constraintEnd_toEndOf="@+id/phoneticAlphabetButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/phoneticAlphabetButton"
        app:layout_constraintTop_toTopOf="@+id/phoneticAlphabetButton"
        app:layout_constraintVertical_bias="0.186"
        app:srcCompat="@drawable/phoneticicon"
        android:contentDescription="@string/phoneticicon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:fontFamily="@font/armata"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>